--- a/package.json
+++ b/package.json
@@ -17,11 +17,13 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "@uiw/react-back-to-top": "^1.2.3",
+    "@web3forms/react": "^1.1.3",
     "formik": "^2.2.9",
     "framer-motion": "^6.5.1",
     "react": "^18.2.0",
     "react-back-to-top-button": "^0.0.14",
     "react-dom": "^18.2.0",
+    "react-hook-form": "^7.54.2",
     "react-icons": "^5.4.0",
     "react-scripts": "5.0.1",
     "web-vitals": "^2.1.4",
