--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.54.2",
     "react-icons": "^5.4.0",
+    "react-pdf": "^9.2.1",
     "react-scripts": "5.0.1",
     "web-vitals": "^2.1.4",
     "yup": "^0.32.11"
